lab1/Test/L1-A-0-96.output
Error Type A at Line 1
Error Type A at Line 6
Error Type A at Line 9
Error Type A at Line 12
Error Type A at Line 19
