lab1/Test/L1-A-0-96.cmm
int wmq_utXLB0jDGjzHf7 ( int ThWzbdExhAb :, int f5O8udkJXkf7rifIcSc 
  ) {
}
struct bE5t {
}Ih5HX0q3yCorWaJl ( float T4o ) {
  int V [ 600974144 ] %;
  int fkuSqU4hHH5WS5WjIm [ 378166467 ] [ 882088089 
    ] [ 1593938520 ] [ 2047439543 ] [ 136001793 ] [ 280589023 
    ] [ 647849652 ] , f = MNsH \;
  float SVxz9FJpVtNDVVUtg81 [ 1734039262 ] [ 1346851468 
    ] ;
  if ( aJ [ YEBk8a36ankUokksqWy ] @/ YatqVd9DeiMhHUXGfpab 
    - tziPayDF6lwskPk1p - hUc - tUJDBKt + v1w9u3 - kKMq0 
    && klB9s && dYrDIVsGc8hS && SaEX1JHvrr5 )   jROPe 
    ;
else   SLdOEFzgUE1 ;

  if ( - Ajbg_a9A_Q3f = DDreMQehv35CWPrhVq2_ )   fT9 
    ;^

}
